--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "chemfam",
-  "version": "0.1.0",
+  "name": "react-quiz",
+  "version": "0.0.1",
   "private": true,
+  "homepage": "http://mitchgavan.com/react-multi-choice-quiz/",
+  "devDependencies": {
+    "react-scripts": "0.2.1"
+  },
   "dependencies": {
-    "material-ui": "^1.0.0-beta.41",
-    "react": "^16.3.1",
-    "react-beautiful-dnd": "^7.0.0",
-    "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4",
-    "semantic-ui-react": "^0.79.1"
+    "react": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
+    "react-addons-update": "^15.3.0",
+    "react-dom": "^15.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
