--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react-scripts": "0.2.1"
   },
   "dependencies": {
+    "material-ui": "^1.0.0-beta.41",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-update": "^15.3.0",
