--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-addons-update": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-progressbar.js": "^0.2.0",
+    "semantic-ui-react": "^0.79.1",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
