--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "react-quiz",
   "version": "0.0.1",
   "private": true,
-  "homepage": "http://mitchgavan.com/react-multi-choice-quiz/",
+  "homepage": "http://sujunglee.com/chemfam",
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "react-scripts": "0.2.1"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
