--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-addons-update": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-progressbar.js": "^0.2.0",
+    "react-router-dom": "^4.3.1",
     "semantic-ui-react": "^0.79.1",
     "typeface-roboto": "0.0.54"
   },
